objects/Onboarding_Tour_Slides__mdt.object
<CustomObject>
    <description>Junction between Onboarding Tour and Onboarding Slides</description>
    <fields>
        <fullName>Onboarding_Slide__c</fullName>
        <label>Onboarding Slide</label>
        <referenceTo>Onboarding_Slide__mdt</referenceTo>
        <relationshipName>Onboarding_Tours</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Onboarding_Tour__c</fullName>
        <label>Onboarding Tour</label>
        <referenceTo>Onboarding_Tour__mdt</referenceTo>
        <relationshipName>Onboarding_Tour_Slides</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Onboarding Tour Slide</label>
    <listViews>
        <fullName>HCP_Onboarding_Tour</fullName>
        <columns>Order__c</columns>
        <columns>MasterLabel</columns>
        <columns>Onboarding_Slide__c</columns>
        <columns>Onboarding_Tour__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Onboarding_Tour__c</field>
            <operation>contains</operation>
            <value>HCP</value>
        </filters>
        <label>HCP Onboarding Tour</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PI_Onboarding_Tour</fullName>
        <columns>Order__c</columns>
        <columns>MasterLabel</columns>
        <columns>Onboarding_Slide__c</columns>
        <columns>Onboarding_Tour__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Onboarding_Tour__c</field>
            <operation>contains</operation>
            <value>PI</value>
        </filters>
        <label>PI Onboarding Tour</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Participant_Onboarding_Tour</fullName>
        <columns>Order__c</columns>
        <columns>MasterLabel</columns>
        <columns>Onboarding_Slide__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Onboarding_Tour__c</field>
            <operation>equals</operation>
            <value>Participant</value>
        </filters>
        <label>Participant Onboarding Tour</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Onboarding Tour Slides</pluralLabel>
</CustomObject>